# virt-dekanat-backend

./: .gitignore  alembic.ini  docker-compose.yaml  promtail-config.yml  pyproject.toml  requirements.txt
deploy/docker/: Dockerfile
docs/: local.md  migrations.md
fastapi-app/logs/: logs.json
prometheus/: prometheus.yml
src/: initializer.py  main.py
src/api/: router.py  status.py
src/api/v1/: attendance.py  discipline.py  dopusk.py  grade.py  group.py  professor.py  router.py  student.py  user.py
src/db/: helpers.py
src/dependencies/: attendance.py  discipline.py  dopusk.py  grade.py  group.py  professor.py  student.py  user.py
src/migrations/: env.py
src/migrations/backup/: 16a575a48a39_added_enums_for_permissions.py  384b9a78b1c1_add_create_time_to_user.py  aebaf184bb63_change_password_field_name.py
src/migrations/versions/: 25c20c27e097_changed_professors_to_json.py  33e352a9fdce_student_group_rel.py  3a13e2f660fd_grade_type_field.py  3ef70ea15c7e_dopusk_model.py  4635ea13d67d_add_professor_model.py  5209f082e0ed_init.py  53e7d3ec368a_grade_type_enum.py  5ce18eb46c9b_default_tole.py  89c9c25ccc75_role_relationships.py  (+10 more)
src/models/: __init__.py  attendance.py  base.py  discipline.py  dopusk.py  grade.py  group.py  professor.py  professor_discipline.py  score.py  student.py  user.py
src/repositories/: base.py  user.py
src/schemas/: user.py
src/services/: user.py
src/settings/: __init__.py  log_config.py  settings.env  settings.py
src/templates/: admin.html  admin_login.html
src/utils/: auth.py  exception_handlers.py  exceptions.py
(+33 files in other folders)
