[project]
name = "virt-dekanat-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "MonkaS",email = "danchik646@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy[asyncpg] (>=2.0.40,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "bcrypt (==4.2.1)",
    "python-jose (>=3.4.0,<4.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
